2004-01-04  Shiro Kawai  <shiro@acm.org>

	* src/Makefile.in (INSTALL_DIRS): added directory to install
	  kahua.* modules.

2004-01-02 Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* test/admin.scm : change to use cvs import, checkout.

2004-01-02 Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-admin.in : support cvs update. "cvs update [type]"

	* src/kahua/config.scm : add "repository" slot.

        * test/kahua-server.in (reload-server) : reload specifyed file.

	* test/admin.scm : add kahua-admin test program.

2003-12-29  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/xml.scm : The last fix about *test-error* is wrong.
	  If the test procedure gets *test-error* as input, it should return
	  #f---it never matches any pattern anyway.

2003-12-28  Shiro Kawai  <shiro@acm.org>

	* cgi/kahua.cgi.in (send-reply) : pass PATH_INFO information (after
	  removing ~user) to the server via "x-kahua-path-info" header
	  field.

2003-12-27  Shiro Kawai  <shiro@acm.org>

	* src/kahua/gsid.scm (make-worker-id), 
	  src/kahua/session.scm (make-cont-key): changed to use base-36
	  numbers instead of base-10, to shorten the key.

	* src/kahua/test/worker.scm : refactored out common procedures for
	  testing worker scripts.

	* src/kahua/test/xml.scm : test-* procedures (i.e. the ones to be
	  used in the last arg of test and test*) now returns *test-error*
	  when it receives *test-error*; attempting to parse *test-error*
	  results hard-to-track error messages.

	* test/worker.scm, test/lambdabooks.scm, test/wiki-iki.scm :
	  revised to use kahua.test.worker.

2003-12-26  Shiro Kawai  <shiro@acm.org>

	* examples/wiki-iki/* : added another example: simple wiki

2003-12-27  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua/config.scm(kahua-init): add "skip-check?" optional argument
	  to solve this problem:
	  http://www.kahua.org/mlarchive/kahua-dev/msg00142.html

2003-12-26  Shiro Kawai  <shiro@acm.org>
